<resources>
    <string name="app_name">Floating Music</string>

    <string name="alert_overlay_permission_title">Display over other apps</string>
    <string name="alert_overlay_permission_message">To use the floating music control, allow \"Allow display over other apps\".</string>
    <string name="alert_overlay_permission_btn_positive">Setting</string>
    <string name="alert_overlay_permission_btn_negative">Cancel</string>
    <string name="alert_notification_permission_title">Notification access</string>
    <string name="alert_notification_permission_message">To use the floating music control, Allow \"Floating Music\" on Notification access.</string>
    <string name="alert_notification_permission_btn_positive">Setting</string>
    <string name="alert_notification_permission_btn_negative">Cancel</string>

    <string name="msg_need_to_play">Please play a music on the other apps.</string>

    <string name="des_floating_playing_image">Album art</string>
    <string name="des_floating_button_play">Play button</string>
    <string name="des_floating_button_prev">Skip previous button</string>
    <string name="des_floating_button_next">Skip next button</string>
    <string name="des_floating_button_close">Close button</string>
    <string name="des_floating_button_setting">Setting button</string>
    <string name="des_floating_button_launch">Launch the music app button</string>

    <string name="pref_title_fontsize_title">Song title font size</string>
    <string name="pref_title_fontsize_message">Adjust font size of a song title.</string>
    <string name="pref_time_fontsize_title">Time font size</string>
    <string name="pref_time_fontsize_message">Adjust font size of a current playing time.</string>
    <string name="pref_view_opacity_title">View opacity</string>
    <string name="pref_view_opacity_message">Adjust opacity of the control view.</string>
    <string name="pref_button_opacity_title">Top Buttons opacity</string>
    <string name="pref_button_opacity_message">Adjust opacity of the top buttons.</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_support_message">Buy a coffee to developer.</string>
    <string name="pref_button_size_title">Button size</string>
    <string name="pref_button_size_message">Adjust button size of play, prev, forward buttons.</string>
    <string name="pref_show_album_title">Display album title</string>
    <string name="pref_show_album_message">ON for displaying album title, or OFF</string>
    <string name="pref_show_clock_title">Display clock</string>
    <string name="pref_show_clock_message">ON for displaying clock, or OFF</string>
    <string name="pref_clock_size_title">Clock text size</string>
    <string name="pref_clock_size_message">Adjust text size of the clock.</string>
</resources>