<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.ListPreference
        android:defaultValue="12"
        android:entries="@array/fontsize"
        android:entryValues="@array/fontsize_value"
        android:key="title_fontsize"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_title_fontsize_message"
        android:title="@string/pref_title_fontsize_title" />
    <androidx.preference.ListPreference
        android:defaultValue="10"
        android:entries="@array/fontsize"
        android:entryValues="@array/fontsize_value"
        android:key="time_fontsize"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_time_fontsize_message"
        android:title="@string/pref_time_fontsize_title" />
    <androidx.preference.ListPreference
        android:defaultValue="0.7"
        android:entries="@array/opacity_value"
        android:entryValues="@array/opacity_value"
        android:key="view_opacity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_view_opacity_message"
        android:title="@string/pref_view_opacity_title" />
    <androidx.preference.ListPreference
        android:defaultValue="1.0"
        android:entries="@array/opacity_value"
        android:entryValues="@array/opacity_value"
        android:key="top_button_opacity"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_button_opacity_message"
        android:title="@string/pref_button_opacity_title" />
    <androidx.preference.Preference
        android:key="support"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_support_message"
        android:title="@string/pref_support_title" />
</androidx.preference.PreferenceScreen>