<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black"
        android:contentDescription="@string/des_floating_playing_image"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dim" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/play_button"
            style="@style/Theme.AndroidFloatingMusic.ImageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/des_floating_button_play"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_pause" />

        <ImageButton
            android:id="@+id/prev_button"
            style="@style/Theme.AndroidFloatingMusic.ImageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@id/play_button"
            android:layout_alignBottom="@id/play_button"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/play_button"
            android:contentDescription="@string/des_floating_button_prev"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_skip_previous_24" />

        <ImageButton
            android:id="@+id/next_button"
            style="@style/Theme.AndroidFloatingMusic.ImageButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@id/play_button"
            android:layout_alignBottom="@id/play_button"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/play_button"
            android:contentDescription="@string/des_floating_button_next"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_skip_next_24" />

        <RelativeLayout
            android:id="@+id/time_slider_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_time_slider_height"
            android:layout_alignParentBottom="true"
            android:background="#99FFFFFF">

            <View
                android:id="@+id/time_slider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#FFFFFFFF"
                tools:layout_width="20dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/time_position_text"
            style="@style/Theme.AndroidFloatingMusic.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_time_slider_height"
            android:maxLines="1"
            android:padding="4dp"
            android:text="00:00"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/time_duration_text"
            style="@style/Theme.AndroidFloatingMusic.Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_time_slider_height"
            android:maxLines="1"
            android:padding="4dp"
            android:text="00:00"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/close_button"
        style="@style/Theme.AndroidFloatingMusic.ImageButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/des_floating_button_close"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_close_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>